changed title of blog for realsies this time

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- Banner with title and hamburger -->
     <div class="banner bg-cover bg-center h-64 flex justify-between items-center px-5" style="background-image: url('path_to_your_image.jpg');">
-        <h1 class="text-white text-5xl font-bold drop-shadow-lg">Woodland Blog</h1>
+        <h1 class="text-white text-5xl font-bold drop-shadow-lg">NRG-ENGR</h1>
         <div class="hamburger space-y-1 cursor-pointer" onclick="toggleMenu()">
             <div class="w-8 h-1 bg-white"></div>
             <div class="w-8 h-1 bg-white"></div>
