backend upload scritping

--- a/index.html
+++ b/index.html
@@ -50,18 +50,17 @@
             <button onclick="acceptTerms()" class="bg-green-600 py-2 px-4 rounded">Continue</button>
         </div>
     </div>
-
-    <!-- Banner with title and hamburger -->
-    <div class="banner bg-cover bg-center h-64 flex justify-between items-center px-5" style="background-image: url('path_to_your_image.jpg');">
-        <h1 class="text-white text-5xl font-bold drop-shadow-lg">NRG-ENGR</h1>
-        <div class="hamburger space-y-1 cursor-pointer" onclick="toggleMenu()">
-            <div class="w-8 h-1 bg-white"></div>
-            <div class="w-8 h-1 bg-white"></div>
-            <div class="w-8 h-1 bg-white"></div>
-        </div>
+    <!--banner with hamburger-->
+<div class="banner bg-cover bg-center h-64 flex justify-between items-center px-5" style="background-image: url('assets/images/home_banner.jpeg');">
+    <h1 class="text-white text-5xl font-bold drop-shadow-lg">NRG-ENGR</h1>
+    <div class="hamburger space-y-1 cursor-pointer" onclick="toggleMenu()">
+        <div class="w-8 h-1 bg-white"></div>
+        <div class="w-8 h-1 bg-white"></div>
+        <div class="w-8 h-1 bg-white"></div>
     </div>
+</div>    
 
-    <!-- Hidden navigation menu -->
+	<!-- Hidden navigation menu -->
     <div id="menu" class="hidden absolute top-16 right-5 bg-black bg-opacity-70 text-white p-4 rounded-lg space-y-2">
         <a href="#section1" class="block">Blog Posts</a>
         <a href="#section2" class="block">About</a>
