jeckyll has screwed things up

--- a/index.html
+++ b/index.html
@@ -61,11 +61,19 @@
 </div>    
 
 	<!-- Hidden navigation menu -->
-    <div id="menu" class="hidden absolute top-16 right-5 bg-black bg-opacity-70 text-white p-4 rounded-lg space-y-2">
+    <nav id="menu" class="hidden">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+<!--   <div id="menu" class="hidden absolute top-16 right-5 bg-black bg-opacity-70 text-white p-4 rounded-lg space-y-2">
         <a href="#section1" class="block">Blog Posts</a>
         <a href="#section2" class="block">About</a>
         <a href="#section3" class="block">Contact</a>
-    </div>
+    </div>-->
 
     <!-- Blog post section -->
     <section class="py-10 px-5" id="section1">
