--- a/NRG-ENGR-jekyll/index.html
+++ b/NRG-ENGR-jekyll/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NRG-ENGR</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="utilities.css">
+    <link rel="stylesheet" href="assets/css/utilities.css">
     <script>
         function toggleMenu() {
             const menu = document.getElementById('menu');
@@ -36,7 +36,7 @@
     <!-- Splash screen for login and TOS -->
     <div id="splashScreen" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center text-white hidden">
         <div class="text-center space-y-4">
-            <h2 class="text-3xl font-bold">Welcome to the Woodland Blog</h2>
+            <h2 class="text-3xl font-bold">stay out of the Woodland Blog, this is my home</h2>
             <p>Please log in to continue:</p>
             <form class="space-y-2">
                 <input type="text" placeholder="Username" required class="w-full p-2 text-black rounded">
