--- a/NRG-ENGR-jekyll/about.html
+++ b/NRG-ENGR-jekyll/about.html
@@ -3,7 +3,24 @@ layout: default
 title: About
 ---
 
-<div class="bg-blue-500 text-white p-6">
-  <h1 class="text-4xl font-bold">Welcome to NRG Engineering</h1>
-  <p>Your homepage content goes here.</p>
-</div>
+<section class="bg-blue-500 text-white p-6">
+  <h1 class="text-4xl font-bold mb-4">About NRG Engineering</h1>
+  <p class="text-lg">
+    Welcome to NRG Engineering, where innovation and creativity meet to create solutions that transform industries.
+    We specialize in advanced engineering solutions, tailored to meet your specific needs.
+  </p>
+</section>
+
+<section class="p-6 mt-6">
+  <h2 class="text-2xl font-semibold mb-4">Our Mission</h2>
+  <p class="text-lg">
+    Our mission is to drive innovation through engineering excellence, ensuring the highest quality results for our clients.
+  </p>
+</section>
+
+<section class="p-6 mt-6">
+  <h2 class="text-2xl font-semibold mb-4">Contact Us</h2>
+  <p class="text-lg">
+    Reach out to us to learn more about how we can help you take your projects to the next level.
+  </p>
+</section>
